@@ -10,6 +10,7 @@ ikiwiki (2.71) UNRELEASED; urgency=low
   * Fix handling of wrappergroup option.
   * Correct --dumpsetup to include the srcdir in the setup file.
   * German translation update from Kai Wasserbäch. Closes: #507056
+  * inline: Support emptyfeeds=no option to skip generating empty feeds.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 17 Nov 2008 14:02:10 -0500
 
